<resources>
    <string name="app_name">MessageShareApp</string>

    <string name="button_show_toast">Show Toast</string>
    <string name="button_show_toast_again">Show Toast Again</string>

    <string name="button_click">Button is clicked!!!</string>
    <string name="button_click_again">Toast Again Button Clicked!!!</string>
    <string name="send_to_activity">Send Data To Next Activity</string>
    <string name="enter_name">Enter your name</string>
    <string name="send_to_social_activity">Send To Social Activity</string>
    <string name="recyclerview_and_cardview_demo">Recycler View and Card View Demo</string>

</resources>
