<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">


    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/button_show_toast" />

    <Button
        android:id="@+id/btnSendToActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="335dp"
        android:text="@string/send_to_activity" />

    <EditText
        android:id="@+id/etUserMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnShareToOtherActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/btnSendToActivity"
        android:layout_alignParentEnd="true"
        android:text="@string/send_to_social_activity" />

    <Button
        android:id="@+id/btnRecyclerViewDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnShareToOtherActivity"
        android:layout_centerHorizontal="true"
        android:text="@string/recyclerview_and_cardview_demo" />
</RelativeLayout>